--- a/kasetsu.html
+++ b/kasetsu.html
@@ -19,7 +19,23 @@
   <li>
    <h1>Ⅱ　仮説</h1>
     <p>「評価・改善する『情報活用能力』」を育むため，ICT活用時の振り返り活動を効果的に取り入れた授業を行うことで，自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p>
-    </li>
+   <div><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="35%"><br><p>「評価・改善する『情報活用能力』」を育むため，</p></div>
+   <p><b>⇩</b></p>
+    <table border="1"cellspacing="0" bordercolor="#333" width="98%">
+           <tr align="center">
+             <th width="22%"><b>プログラミングの学習活動での振り返り（「随時振り返り」型）</b></th>
+             <th width="38%"><b>プログラミングの学習活動での振り返り（総括振り返り型）</b></th>
+             <th width="40%"><b>調べたことをデジタルで表現し，改善を重ねていく活動での振り返り</b></th>
+           </tr>
+   　　　　<td><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="100%"></td>
+           <td><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="総括振り返り型" width="100%"></td>
+           <td><img src="https://tkby.github.io/micra.github.io/micrafurikaeri.jpg" alt="マイクラの振り返り" width="100%"></td>
+           </table>
+     <p>ICT活用時の振り返り活動を効果的に取り入れた授業を行うことで，</p>
+     <p><b>⇩</b></p>   
+     <div><img src="https://tkby.github.io/micra.github.io/pdca.png" alt="評価・改善" width="40%"><br><p>自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p></div>
+    
+  </li>
  </ul>
 
     </body>
