--- a/kasetsu.html
+++ b/kasetsu.html
@@ -33,7 +33,7 @@
            </table>
      <p>ICT活用時の振り返り活動を効果的に取り入れた授業を行うことで，</p>
      <p><b>⇩</b></p>   
-     <div><img src="https://tkby.github.io/micra.github.io/pdca.png" alt="評価・改善" width="40%"><br><p>自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p></div>
+     <div><img src="https://tkby.github.io/micra.github.io/pdca.png" alt="評価・改善" width="%"><br><p>自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p></div>
     
   </li>
  </ul>
