--- a/kasetsu.html
+++ b/kasetsu.html
@@ -19,7 +19,7 @@
   <li>
    <h1>Ⅱ　仮説</h1>
     <p>「評価・改善する『情報活用能力』」を育むため，ICT活用時の振り返り活動を効果的に取り入れた授業を行うことで，自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p>
-   <div><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="35%"><br><p>「評価・改善する『情報活用能力』」を育むため，</p></div>
+   <div><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="25%"><br><p>「評価・改善する『情報活用能力』」を育むため，</p></div>
    <p><b>⇩</b></p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
            <tr align="center">
@@ -33,7 +33,7 @@
            </table>
      <p>ICT活用時の振り返り活動を効果的に取り入れた授業を行うことで，</p>
      <p><b>⇩</b></p>   
-     <div><img src="https://tkby.github.io/micra.github.io/pdca.png" alt="評価・改善" width="%"><br><p>自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p></div>
+     <div><img src="https://tkby.github.io/micra.github.io/pdca.png" alt="評価・改善" width="25%"><br><p>自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p></div>
     
   </li>
  </ul>
