--- a/kagami.html
+++ b/kagami.html
@@ -41,11 +41,12 @@ img{
         <li>
           <h2>要旨<a href ="https://tkby.github.io/micra.github.io/youshi.html">→</a></h2>
             <h3>Ⅰ研究の背景と目的</h3>
-            <h3>1 研究の背景<a href ="https://tkby.github.io/micra.github.io/kenkyuhaikei.html">→</a></h3>
-                    <ul>(1)情報活用能力に関する現状</a>
-                       <li>①国内の動向
-                       <li>②「情報活用能力」に関する所属校児童の実態
-                    </ul>
+                <ul><li><h3>1 研究の背景<a href ="https://tkby.github.io/micra.github.io/kenkyuhaikei.html">→</a></h3>
+                           <ul>(1)情報活用能力に関する現状</a>
+                               <li>①国内の動向
+                               <li>②「情報活用能力」に関する所属校児童の実態
+                            </ul>
+                </ul>
             <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html">→</a></h3>
             <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html">→</a></h3>
                              <ul>
