--- a/matome.html
+++ b/matome.html
@@ -29,7 +29,7 @@
                  </ul>       
     　       <li>２　課題
                  <ul><li>例題及び応用テストのプログラムやプログラミングスキルチェックの難易度が適切かは検証できていない。
-                  　 <li>地域の松堂をデジタルで表現する活動で，「表現力・伝達力」を高める手立てを明らかにできていない。
+                  　 <li>地域の祭りをデジタルで表現する活動で，「表現力・伝達力」を高める手立てを明らかにできていない。
                  </ul>
         </ul>
     </li>
