--- a/56joche.html
+++ b/56joche.html
@@ -116,10 +116,10 @@
         <table border="1"cellspacing="0" bordercolor="#333" width="98%">
            <tr align="center">
              <th width="10%"><b>学年</b></th>
-             <th width="10%"><b>人数（５月）</b></th>
-             <th width="30%"><b>第１回平均</b></th>
-             <th width="10%"><b>人数（11月）</b></th>
-             <th width="30%"><b>第２回平均</b></th>
+             <th width="10%"><b>人数<br>（５月）</b></th>
+             <th width="30%"><b>第１回<br>平均</b></th>
+             <th width="10%"><b>人数<br>（11月）</b></th>
+             <th width="30%"><b>第２回<br>平均</b></th>
              <th width="10%"><b>伸び</b></th>
            </tr>
          
@@ -147,12 +147,12 @@
              <th width="3%"><b>設問</b></th>
              <th width="10%"><b>分類</b></th>
              <th width="15%"><b>内容</b></th>         
-             <th width="8%"><b>対象人数(５月）</b></th>
-             <th width="8%"><b>平均(５月）</b></th>   
-             <th width="8%"><b>標準偏差(５月）</b></th>
-             <th width="8%"><b>対象人数（11月）</b></th>
-             <th width="8%"><b>平均(11月）</b></th> 
-             <th width="8%"><b>標準偏差(11月）</b></th>
+             <th width="8%"><b>対象人数<br>(５月）</b></th>
+             <th width="8%"><b>平均<br>(５月）</b></th>   
+             <th width="8%"><b>標準偏差<br>(５月）</b></th>
+             <th width="8%"><b>対象人数<br>（11月）</b></th>
+             <th width="8%"><b>平均<br>(11月）</b></th> 
+             <th width="8%"><b>標準偏差<br>(11月）</b></th>
              <th width="8%"><b>差</b></th>
              <th width="8%"><b>p値</b></th>
              <th width="8%"><b>効果量d</b></th>
