--- a/56joche.html
+++ b/56joche.html
@@ -116,10 +116,10 @@
         <table border="1"cellspacing="0" bordercolor="#333" width="98%">
            <tr align="center">
              <th width="10%"><b>学年</b></th>
-             <th width="10%"><b>人数<br>（５月）</b></th>
-             <th width="30%"><b>第１回<br>平均</b></th>
-             <th width="10%"><b>人数<br>（11月）</b></th>
-             <th width="30%"><b>第２回<br>平均</b></th>
+             <th width="10%"><b>人数（５月）</b></th>
+             <th width="30%"><b>第１回平均</b></th>
+             <th width="10%"><b>人数（11月）</b></th>
+             <th width="30%"><b>第２回平均</b></th>
              <th width="10%"><b>伸び</b></th>
            </tr>
          
