--- a/IV2_2.html
+++ b/IV2_2.html
@@ -82,7 +82,7 @@
                </tr>
                <tr>
                   <td>お祭り中の商店街</td>
-                  <td><ul><li>美しい<li>統一感のある<li>変化に富んだ<li>歴史のある<li>自然的な<li>明るい<li>個性的な<li>親しみやすい<li>いやされるような<li>解放的な<li>あたたかみがある<li>み力的な<li>あそびたい<li>にぎやかな<li>いなかっぽい</td>
+                  <td><ul><li>美しい<li>統一感のある<li>変化に富んだ<li>歴史のある<li>自然的な<li>明るい<li>個性的な<li>親しみやすい<li>いやされるような<li>解放的な<li>あたたかみがある<li>み力的な<li>あそびたい<li>にぎやかな<li>いなかっぽい</ul></td>
                   <td>地域の祭りに町の人が願うことではないか？</td>
              </tr>
           </table>
@@ -105,9 +105,9 @@
                </tr>
   　           <tr>
                    <td>マインクラフトで<br>制作した<br>商店街</td>
-                   <td><ul><li>変化に富んだ<li>歴史のある<li>自然的な<li>親しみやすい<li>あたたかみのある<li>いなかっぽい</td>
+                   <td><ul><li>変化に富んだ<li>歴史のある<li>自然的な<li>親しみやすい<li>あたたかみのある<li>いなかっぽい</ul></td>
                    <td>⇔<br>⇔<br>⇔<br>⇔<br>⇔<br>⇔</td>
-                   <td><ul><li>たんちょうな<li>新しい<li>都市的な<li>親しみにくい<li>よそよそしい<li>都会的な</td>
+                   <td><ul><li>たんちょうな<li>新しい<li>都市的な<li>親しみにくい<li>よそよそしい<li>都会的な</ul></td>
                </tr>
                </table>
              
