--- a/IV2_2.html
+++ b/IV2_2.html
@@ -110,7 +110,17 @@
                    <td><ul><li>たんちょうな<li>新しい<li>都市的な<li>親しみにくい<li>よそよそしい<li>都会的な</ul></td>
                </tr>
                </table>
-             
+               <ul><li>相違点
+                    <ul><li>第３回検証授業では，マインクラフトで制作した商店街の，児童と大人プロフィールを比較させた。
+                        <li>児童は日常の商店街の時（第１回検証授業）よりも，大人と子供でプrフィールが大きく異なることに気付いた。
+                        <li>原因を児童にたずねると，制作物がまだ商店街を上手く表現できていないからだと考えた。
+                        <li>以下は，この結果を町づくりにどのように生かすか考えた児童の発言例である。
+                           <ul><li>大人が「たんちょうな」寄りと評価している。お店の素材をもっと工夫して，商店街らしさを出したい。
+                               <li>町の自との願いを表g年できていないと思うので，親しみやすい雰囲気にする。
+                               <li>都会的になってしまった。商店街の田舎っぽさを出すために，木目や茶色のブロックを多く使いたい。
+                           </ul>
+                    </ul>
+               </ul>
              
     </li>
  </ul>
