--- a/IV2_2.html
+++ b/IV2_2.html
@@ -95,7 +95,7 @@
   
    <h2>第３回検証授業　プロフィール相違点</h2>
           <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="マイクラ商店街" width="70%"></div>
-               <p>マインクラフトで制作した商店街に対する，大人と子供の捉え方の相違点(どちら側に寄っているか）</p>
+               <p>下の表は，マインクラフトで制作した商店街に対する大人と子供の捉え方を比較し，どちら側に寄っているかを示すものです。</p>
                <table border="1"cellspacing="0" bordercolor="#333" width="98%">
                <tr align="center">
                    <th width="15%"><b>種類</b></th>
