--- a/dai14.html
+++ b/dai14.html
@@ -1,5 +1,23 @@
-
-<h2>第１回検証授業「随時振り返り型」の展開</h2>
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+  <li>
+  <h2>第１回検証授業「随時振り返り型」の展開</h2>
      <table border="1"cellspacing="0" bordercolor="#333" width="98%">
          <tr align="center">
              <th width="20%"><b>学習活動</b></th>
@@ -27,3 +45,18 @@
               <td>児童は１人１台で実機を使いながら考える。</td>
          </tr>
   </table> 
+  </li>
+ </ul>
+
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
+© 2022 GitHub, Inc.
+Terms
+
+
