--- a/dai14.html
+++ b/dai14.html
@@ -50,7 +50,7 @@
 
     </body>
    <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/prograkensho.html'">もどる</button>
 </nav>
 
 <small>© 2021 Created by Yoshinori Takebayashi</small>
