--- a/dai23.html
+++ b/dai23.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+  <li>
+  <h2>第２回検証授業「随時振り返り型」の展開</h2>
+     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
+         <tr align="center">
+             <th width="20%"><b>学習活動</b></th>
+             <th width="50%"><b>指導上の留意点</b></th>
+             <th width="15%"><b>評価</b></th>
+             <th width="15%"><b>備考</b></th>
+         </tr>  
+         <tr>
+              <td>１.本時の見通しをもつ（３分）</td>
+              <td>本時の流れを確認する。<li>＜おさえること＞<ul><li>グループでプログラムを考え，良い考えが生まれたら全体で発表する。<li>発表された考えでねらいを達成できるか全体で考える。<li>ねらいを達成できる考えであれば
+               全員ワークシートにメモをする。<li>プログラムが完成するまでこれを繰り返す。</td>
+              <td></td>
+              <td></td>
+         </tr>
+         <tr>
+              <td></td>
+              <td><b>めあて 上から３，２，１，０とならぶすうじを，プログラミングで０，１，２，３にならべかえることができるようになろう</td>
+              <td></td>
+              <td></td>
+         </td>
+         <tr>
+              <td>２．課題をつかむ（２分）</td>
+              <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示する。<li>数字の順番を変えても０，１，２，３に並べ替えるプログラムであることを抑える。<li>良い考えが出たグループはプログラムを発表してもらう。</td>
+              <td><ul>自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
+              <td>児童は１人１台で実機を使いながら考える。</td>
+         </tr>
+  </table> 
+  </li>
+ </ul>
+
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/prograkensho.html'">もどる</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
+© 2022 GitHub, Inc.
+Terms
 
