--- a/dai14.html
+++ b/dai14.html
@@ -41,7 +41,7 @@
          <tr>
               <td>２．課題をつかむ（２分）</td>
               <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示する。<li>数字の順番を変えても０，１，２，３に並べ替えるプログラムであることを抑える。<li>良い考えが出たグループはプログラムを発表してもらう。</td>
-              <td><ul>自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
+              <td>自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
               <td>児童は１人１台で実機を使いながら考える。</td>
          </tr>
   </table> 
