--- a/dai14.html
+++ b/dai14.html
@@ -18,7 +18,12 @@
  <ul class="box-list" style="list-style:none;">
   <li>
   <h2>第１回検証授業「随時振り返り型」の展開</h2>
-     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
+         <div>
+              <video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  autoplay loop width="49%">
+                 <p>動画を再生できません。</p>
+              </video>
+         </div>
+         <table border="1"cellspacing="0" bordercolor="#333" width="98%">
          <tr align="center">
              <th width="20%"><b>学習活動</b></th>
              <th width="50%"><b>指導上の留意点</b></th>
