--- a/dai14.html
+++ b/dai14.html
@@ -18,15 +18,20 @@
  <ul class="box-list" style="list-style:none;">
   <li>
     <tr align="center">
-             <th width="40%"><b>命令</b></th>
-             <th width="60%"><b>プログラムの仕方</b></th>
+             <th width="20%"><b>命令</b></th>
+             <th width="40%"><b>例題プログラム</b></th>
+             <th width="40%"><b>応用テストプログラム</b></th>
    </tr>  
    <tr>
         <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" alt="バブルソート" width="100%"</td>
         <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  autoplay loop width="49%">
                  <p>動画を再生できません。</p>
            </video>
-       </td>
+        </td>
+        <td><video src="https://tkby.github.io/micra.github.io/.MP4" controls muted  autoplay loop width="49%">
+                 <p>動画を再生できません。</p>
+           </video>
+        </td>
    </tr>
   </table>
           <h2>第１回検証授業「随時振り返り型」の展開</h2>
