--- a/dai14.html
+++ b/dai14.html
@@ -17,6 +17,7 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
+    <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
              <th width="20%"><b>命令</b></th>
              <th width="40%"><b>例題プログラム</b></th>
@@ -24,11 +25,11 @@
    </tr>  
    <tr>
         <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" alt="バブルソート" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  autoplay loop width="49%">
+        <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>
-        <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  autoplay loop width="49%">
+        <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>
