--- a/dai14.html
+++ b/dai14.html
@@ -19,8 +19,9 @@
   <li>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
-             <th width="20%"><b>命令</b></th>
+             <th width="10%"><b>命令</b></th>
              <th width="40%"><b>例題プログラム</b></th>
+             <th width="10%"><b>命令</b></th>
              <th width="40%"><b>応用テストプログラム</b></th>
    </tr>  
    <tr>
@@ -29,6 +30,7 @@
                  <p>動画を再生できません。</p>
            </video>
         </td>
+        <td><img src="https://tkby.github.io/micra.github.io/baburuoyo.jpg" alt="バブルソート２" width="100%"</td>
         <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
