--- a/dai14.html
+++ b/dai14.html
@@ -37,7 +37,7 @@
         </td>
    </tr>
   </table>
-          <h2>第１回検証授業「随時振り返り型」の展開</h2>
+          <h2>第１回検証授業「随時振り返り」型の展開</h2>
          <table border="1"cellspacing="0" bordercolor="#333" width="98%">
          <tr align="center">
              <th width="20%"><b>学習活動</b></th>
