--- a/dai14.html
+++ b/dai14.html
@@ -17,6 +17,8 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
+  <h2>第１回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
+   <p>第１回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは数を直接比較して入れ替える「バブルソート」を題材としている。プログラミングの基本処理は「順次処理」である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
              <th width="10%"><b>命令</b></th>
