--- a/dai14.html
+++ b/dai14.html
@@ -95,6 +95,84 @@
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
   </table> 
+  <h2>第１回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
+   <p>第１回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは数を直接比較して入れ替える「バブルソート」を題材としている。プログラミングの基本処理は「順次処理」である。</p>
+    <table border="1"cellspacing="0" bordercolor="#333" width="98%">
+    <tr align="center">
+             <th width="10%"><b>命令</b></th>
+             <th width="40%"><b>例題プログラム</b></th>
+             <th width="10%"><b>命令</b></th>
+             <th width="40%"><b>応用テストプログラム</b></th>
+   </tr>  
+   <tr>
+        <td><img src="https://tkby.github.io/micra.github.io/mogura.jpg" alt="もぐらたたき" width="100%"</td>
+        <td><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  autoplay loop width="100%">
+                 <p>動画を再生できません。</p>
+           </video>
+        </td>
+        <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" alt="ワニワニ" width="100%"</td>
+        <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  autoplay loop width="100%">
+                 <p>動画を再生できません。</p>
+           </video>
+        </td>
+   </tr>
+  </table>
+          <h2>第４回検証授業「随時振り返り」型の展開</h2>
+         <table border="1"cellspacing="0" bordercolor="#333" width="98%">
+         <tr align="center">
+             <th width="20%"><b>学習活動</b></th>
+             <th width="50%"><b>指導上の留意点</b></th>
+             <th width="15%"><b>評価</b></th>
+             <th width="15%"><b>備考</b></th>
+         </tr>  
+         <tr>
+              <td>１.本時の見通しをもつ（３分）</td>
+              <td>本<ul><li>時の流れを確認する。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表する。<li>発表された考えでねらいを達成できるか全体で考える。<li>ねらいを達成できる考えであれば全員ワークシートにメモをする。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
+              <td></td>
+              <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
+         </tr>
+         <tr>
+              <td></td>
+              <td><b>めあて 上から３，２，１，０とならぶすうじを，プログラミングで０，１，２，３にならべかえることができるようになろう</b></td>
+              <td></td>
+              <td></td>
+         </td>
+         <tr>
+              <td>２．課題をつかむ（２分）</td>
+              <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示する。<li>数字の順番を変えても０，１，２，３に並べ替えるプログラムであることを抑える。<li>良い考えが出たグループはプログラムを発表してもらう。</td>
+              <td>〇自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
+              <td>〇児童は１人１台で実機を使いながら考える。</td>
+         </tr>
+         <tr>
+              <td></td>
+              <td><b>とい　かんがえためいれいは，本とうに正しいのか</b></td>
+              <td></td>
+              <td></td>
+          </tr>
+          <tr>
+              <td>３．課題に取り組む（25分）</td>
+              <td><ul><li>発表していないグループは，発表されたプログラムで正しく動くかどうか実機でトレースして確かめ，全員が良いと思ったらワークシートにメモして続きに取り組む。</td>
+              <td>〇順次処理のプログラムの作成，評価・改善ができる。（話し合いの観察・録音）</td>
+              <td></td>
+          </tr>
+          <tr>
+              <td>４．全ペア又はグループが出来たら全体で振り返りを振り返りをする（10分）</td>
+              <td><ul><li>命令を振り返り，説明ができる児童を募り，１つずつ説明させる。<li>グループから１人ずつ発表する。<li>ワークシートに整理しながら聞く。<li>授業の内容をどれだけ理解できたか把握するために，同レベルの別の問題に個人で取り組む。</ul></td>
+              <td>プログラムを振り返り，改善点を見出そうとする態度が』見られる。（話し合いの録音とワークシートの記述）</td>
+              <td></td>
+           </tr>
+           <tr>
+              <td></td>
+              <td><b>まとめ できたプログラムのいみを１つずつたしかめよう</b></td>
+              <td></td>
+              <td></td>
+           </tr>
+           <tr>
+              <td>５．ミニテスト（５分）</td>
+              <td><ul><li>授業の内容をどれだけ理解できたか把握するために，同レベルの別の問題に個人で取り組む。</ul></td>
+              <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
+              <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
+  </table> 
   </li>
  </ul>
 
