--- a/dai14.html
+++ b/dai14.html
@@ -133,13 +133,13 @@
          </tr>
          <tr>
               <td></td>
-              <td><b>めあて 上から３，２，１，０とならぶすうじを，プログラミングで０，１，２，３にならべかえることができるようになろう</b></td>
+              <td><b>めあて</b></td>
               <td></td>
               <td></td>
          </td>
          <tr>
               <td>２．課題をつかむ（２分）</td>
-              <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示する。<li>数字の順番を変えても０，１，２，３に並べ替えるプログラムであることを抑える。<li>良い考えが出たグループはプログラムを発表してもらう。</td>
+              <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示する。<li><li>良い考えが出たグループはプログラムを発表してもらう。</td>
               <td>〇自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
               <td>〇児童は１人１台で実機を使いながら考える。</td>
          </tr>
