--- a/dai14.html
+++ b/dai14.html
@@ -105,7 +105,7 @@
              <th width="40%"><b>応用テストプログラム</b></th>
    </tr>  
    <tr>
-        <td><img src="https://tkby.github.io/micra.github.io/mogura.jpg" alt="もぐらたたき" width="100%"</td>
+        <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" alt="もぐらたたき" width="100%"</td>
         <td><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
