--- a/dai14.html
+++ b/dai14.html
@@ -95,8 +95,8 @@
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
   </table> 
-  <h2>第１回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
-   <p>第１回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは数を直接比較して入れ替える「バブルソート」を題材としている。プログラミングの基本処理は「順次処理」である。</p>
+  <h2>第４回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
+   <p>第４回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは，あなからもぐらがランダムに出て来て，頭を大きくだしたときにたたくと，もぐらが穴とともに消えるプログラムである。プログラミングの基本処理は「分岐を含む反復」である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
              <th width="10%"><b>命令</b></th>
