--- a/dai14.html
+++ b/dai14.html
@@ -49,7 +49,7 @@
          </tr>  
          <tr>
               <td>１.本時の見通しをもつ（３分）</td>
-              <td>本<ul><li>時の流れを確認する。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表する。<li>発表された考えでねらいを達成できるか全体で考える。<li>ねらいを達成できる考えであれば全員ワークシートにメモをする。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
+              <td><ul><li>本時の流れを確認する。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表する。<li>発表された考えでねらいを達成できるか全体で考える。<li>ねらいを達成できる考えであれば全員ワークシートにメモをする。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
          </tr>
@@ -96,7 +96,7 @@
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
   </table> 
   <h2>第４回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
-   <p>第４回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは，あなからもぐらがランダムに出て来て，頭を大きくだしたときにたたくと，もぐらが穴とともに消えるプログラムである。プログラミングの基本処理は「分岐を含む反復」である。</p>
+   <p>第４回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは，穴からもぐらがランダムに出て来て，頭を大きくだした時にタップすると，もぐらが穴とともに消えるゲームプログラムである。プログラミングの基本処理は「分岐を含む反復」である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
              <th width="10%"><b>命令</b></th>
@@ -127,7 +127,7 @@
          </tr>  
          <tr>
               <td>１.本時の見通しをもつ（３分）</td>
-              <td>本<ul><li>時の流れを確認する。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表する。<li>発表された考えでねらいを達成できるか全体で考える。<li>ねらいを達成できる考えであれば全員ワークシートにメモをする。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
+              <td><ul><li>本時の流れを確認する。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表する。<li>発表された考えでねらいを達成できるか全体で考える。<li>ねらいを達成できる考えであれば全員ワークシートにメモをする。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
          </tr>
