--- a/dai14.html
+++ b/dai14.html
@@ -80,7 +80,7 @@
           <tr>
               <td>４．全ペア又はグループが出来たら全体で振り返りを振り返りをする（10分）</td>
               <td><ul><li>命令を振り返り，説明ができる児童を募り，１つずつ説明させる。<li>グループから１人ずつ発表する。<li>ワークシートに整理しながら聞く。<li>授業の内容をどれだけ理解できたか把握するために，同レベルの別の問題に個人で取り組む。</ul></td>
-              <td>プログラムを振り返り，改善点を見出そうとする態度が』見られる。（話し合いの録音とワークシートの記述）</td>
+              <td>プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
               <td></td>
            </tr>
            <tr>
@@ -158,7 +158,7 @@
           <tr>
               <td>４．全ペア又はグループが出来たら全体で振り返りを振り返りをする（10分）</td>
               <td><ul><li>命令を振り返り，説明ができる児童を募り，１つずつ説明させる。<li>グループから１人ずつ発表する。<li>ワークシートに整理しながら聞く。<li>授業の内容をどれだけ理解できたか把握するために，同レベルの別の問題に個人で取り組む。</ul></td>
-              <td>プログラムを振り返り，改善点を見出そうとする態度が』見られる。（話し合いの録音とワークシートの記述）</td>
+              <td>プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
               <td></td>
            </tr>
            <tr>
