--- a/dai14.html
+++ b/dai14.html
@@ -18,7 +18,7 @@
  <ul class="box-list" style="list-style:none;">
   <li>
   <h2>第１回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
-   <p>第１回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは数を直接比較して入れ替える「バブルソート」を題材としている。プログラミングの基本処理は「順次処理」である。</p>
+   <p>第１回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは数を直接比較して入れ替える<b>「バブルソート」</b>を題材としている。プログラミングの基本処理は「順次処理」である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
              <th width="11%"><b>命令</b></th>
@@ -96,7 +96,7 @@
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
   </table> 
   <h2>第４回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
-   <p>第４回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは，「もぐらたたき」を題材にしている。穴からもぐらがランダムに出て来て，頭を大きくだした時にタップすると，もぐらが穴とともに消えるゲームプログラムである。プログラミングの基本処理は「分岐を含む反復」である。</p>
+  <p>第４回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは，<b>「もぐらたたき」</b>を題材にしている。穴からもぐらがランダムに出て来て，頭を大きくだした時にタップすると，もぐらが穴とともに消えるゲームプログラムである。プログラミングの基本処理は「分岐を含む反復」である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
              <th width="11%"><b>命令</b></th>
