--- a/dai23.html
+++ b/dai23.html
@@ -27,13 +27,13 @@
              <th width="39%"><b>応用テストプログラム</b></th>
    </tr>  
    <tr>
-        <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" alt="バブルソート" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  autoplay loop width="100%">
+        <td><img src="https://tkby.github.io/micra.github.io/pakusutomegane.jpg" alt="パクスト" width="100%"</td>
+        <td><video src="https://tkby.github.io/micra.github.io/pakusuto.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>
-        <td><img src="https://tkby.github.io/micra.github.io/baburuoyo.jpg" alt="バブルソート２" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  autoplay loop width="100%">
+        <td><img src="https://tkby.github.io/micra.github.io/Lchikamodoki.jpg" alt="Ｌチカもどき" width="100%"</td>
+        <td><video src="https://tkby.github.io/micra.github.io/Lchika.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>
@@ -105,13 +105,13 @@
              <th width="39%"><b>応用テストプログラム</b></th>
    </tr>  
    <tr>
-        <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" alt="もぐらたたき" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  autoplay loop width="100%">
+        <td><img src="https://tkby.github.io/micra.github.io/kakijun.jpg" alt="書き順" width="100%"</td>
+        <td><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>
-        <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" alt="ワニワニ" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  autoplay loop width="100%">
+        <td><img src="https://tkby.github.io/micra.github.io/kakijunoyo.jpg" alt="書き順２" width="100%"</td>
+        <td><video src="https://tkby.github.io/micra.github.io/kakijunoyo.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>
