--- a/dai23.html
+++ b/dai23.html
@@ -106,7 +106,7 @@
              <th width="39%"><b>応用テストプログラム</b></th>
    </tr>  
    <tr>
-        <td><img src="https://tkby.github.io/micra.github.io/kakijun.jpg" alt="書き順" width="100%"</td>
+        <td><img src="https://tkby.github.io/micra.github.io/kakijunmegane.jpg" alt="書き順" width="100%"</td>
         <td><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
