--- a/dai23.html
+++ b/dai23.html
@@ -28,7 +28,7 @@
    </tr>  
    <tr>
         <td><img src="https://tkby.github.io/micra.github.io/pakusutomegane.jpg" alt="パクスト" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/pakusuto.MP4" controls muted  autoplay loop width="100%">
+        <td><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
            </video>
         </td>
