--- a/dai23.html
+++ b/dai23.html
@@ -17,8 +17,8 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-  <h2>第１回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
-   <p>第１回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは数を直接比較して入れ替える<b>「バブルソート」</b>を題材としている。プログラミングの基本処理は<b>「順次処理」</b>である。</p>
+  <h2>第２回検証授業「総括振り返り」型で扱った例題プログラムと応用プログラム</h2>
+   <p>第２回検証授業は「総括振り返り」型で授業を行った。例題で扱ったプログラムは<b>「タイマーでの制御」</b>を題材としている。口を開閉するキャラクターが，数字が０になったらストップするプログラムである。プログラミングの基本処理は<b>「分岐を含む反復処理」</b>である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
              <th width="11%"><b>命令</b></th>
@@ -39,7 +39,7 @@
         </td>
    </tr>
   </table>
-          <h2>第１回検証授業「随時振り返り」型の展開</h2>
+          <h2>第２回検証授業「振り返り」型の展開</h2>
          <table border="1"cellspacing="0" bordercolor="#333" width="98%">
          <tr align="center">
              <th width="20%"><b>学習活動</b></th>
@@ -96,8 +96,8 @@
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
   </table> 
-  <h2>第４回検証授業「随時振り返り」型で扱った例題プログラムと応用プログラム</h2>
-  <p>第４回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは，<b>「もぐらたたき」</b>を題材にしている。穴からもぐらがランダムに出て来て，頭を大きくだした時にタップすると，もぐらが穴とともに消えるゲームプログラムである。プログラミングの基本処理は<b>「分岐を含む反復処理」</b>である。</p>
+  <h2>第３回検証授業「総括振り返り」型で扱った例題プログラムと応用プログラム</h2>
+  <p>第３回検証授業は「総括振り返り」型で授業を行った。例題で扱ったプログラムは，<b>「筆順アプリ」</b>を題材にしている。漢字の筆順が一画ずつ増えていき，最終的に感じが完成するプログラムである。プログラミングの基本処理は<b>「順次処理」</b>である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
              <th width="11%"><b>命令</b></th>
@@ -118,7 +118,7 @@
         </td>
    </tr>
   </table>
-          <h2>第４回検証授業「随時振り返り」型の展開</h2>
+          <h2>第３回検証授業「総括振り返り」型の展開</h2>
          <table border="1"cellspacing="0" bordercolor="#333" width="98%">
          <tr align="center">
              <th width="20%"><b>学習活動</b></th>
