--- a/dai23.html
+++ b/dai23.html
@@ -49,41 +49,39 @@
          </tr>  
          <tr>
               <td>１.本時の見通しをもつ（３分）</td>
-              <td><ul><li>本時の流れをつかませる。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表させる。<li>発表された考えでねらいを達成できるか全体で考させる。<li>ねらいを達成できる考えであれば全員ワークシートにメモをさせる。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
+              <td><ul><li>本時の流れをつかませる。<li><ul><li>プログラムの説明し，概要をつかませる。<li>プログラム通りに作らせる。<li>完成した児童には，友達の手助けを促す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
          </tr>
          <tr>
               <td></td>
-              <td><b>めあて 上から３，２，１，０とならぶすうじを，プログラミングで０，１，２，３にならべかえることができるようになろう</b></td>
+              <td><b>めあて コンピュータに３，２，１，０と数えさせ，０になったらパクパクをとめさせることができるようになる。</b></td>
               <td></td>
               <td></td>
          </td>
          <tr>
               <td>２．課題をつかむ（２分）</td>
-              <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示して，プログラムの概要をつかませる。<li>数字の順番を変えても０，１，２，３に並べ替えるプログラムであることを抑える。<li>良い考えが出たグループにはプログラムを発表してもらう。</td>
+              <td><ul><li>カウントする数字をステージから取り除くと，反復し続けることをおさえる。<li>命令を１つず見せ，３→２のように数字が入れ替わる様子をつかませる。</ul> </td>
               <td>〇自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
               <td>〇児童は１人１台で実機を使いながら考える。</td>
          </tr>
-         <tr>
-              <td></td>
-              <td><b>とい　かんがえためいれいは，本とうに正しいのか</b></td>
-              <td></td>
-              <td></td>
-          </tr>
-          <tr>
-              <td>３．課題に取り組む（25分）</td>
-              <td><ul><li>発表していないグループは，発表されたプログラムで正しく動くかどうか実機でトレースして確かめさせ，全員が良いと思ったらワークシートにメモして続きに取り組ませる。</td>
+           <tr>
+              <td>３．プログラムの説明をする（10分）</td>
+              <td><ul><li>全ての命令を説明したら，分かったことを発表させ，ワークシートにメモさせる。</td>
               <td>〇順次処理のプログラムの作成，評価・改善ができる。（話し合いの観察・録音）</td>
               <td></td>
           </tr>
           <tr>
-              <td>４．全ペア又はグループが出来たら全体で振り返りを振り返りをする（10分）</td>
-              <td><ul><li>命令を振り返り，説明ができる児童を募り，１つずつ説明させる。<li>グループから１人ずつ発表する。<li>聞いたことをワークシートに整理させる。</ul></td>
-              <td>プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
+              <td>４．課題に取り組む（15分）</td>
+              <td><ul><li>提示されたプログラムの通りに作ってみる。<li>分からないところは友達同士で話し合わせる。<li>完成した児童には，友達をサポートするよう促す。</ul></td>
+              <td></td>
               <td></td>
            </tr>
-   
+           <tr>
+            <td>５．全体で振り返りをする（10分）</td>
+            <td><ul><li>命令を振り返り，命令を１つずつ児童に説明させる。<li>聞きながらワークシートに整理させる。</td>
+            <td>〇プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
+            <td></td>
            <tr>
               <td></td>
               <td><b>まとめ できたプログラムのいみを１つずつたしかめよう</b></td>
@@ -125,43 +123,42 @@
              <th width="50%"><b>指導上の留意点</b></th>
              <th width="15%"><b>評価</b></th>
              <th width="15%"><b>備考</b></th>
-         </tr>  
-         <tr>
+         </tr> 
+            <tr>
               <td>１.本時の見通しをもつ（３分）</td>
-              <td><ul><li>本時の流れをつかませる。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表させる。<li>発表された考えでねらいを達成できるか全体で考えさせる。<li>ねらいを達成できる考えであれば全員ワークシートにメモさせる。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
+              <td><ul><li>本時の流れをつかませる。<li><ul><li>プログラムの説明し，概要をつかませる。<li>プログラム通りに作らせる。<li>完成した児童には，友達の手助けを促す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
          </tr>
          <tr>
               <td></td>
-              <td><b>めあて</b></td>
+              <td><b>めあて コンピュータに３，２，１，０と数えさせ，０になったらパクパクをとめさせることができるようになる。</b></td>
               <td></td>
               <td></td>
          </td>
          <tr>
               <td>２．課題をつかむ（２分）</td>
-              <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示する。<li><li>良い考えが出たグループはプログラムを発表してもらう。</td>
+              <td><ul><li>カウントする数字をステージから取り除くと，反復し続けることをおさえる。<li>命令を１つず見せ，３→２のように数字が入れ替わる様子をつかませる。</ul> </td>
               <td>〇自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
               <td>〇児童は１人１台で実機を使いながら考える。</td>
          </tr>
-         <tr>
-              <td></td>
-              <td><b>とい　かんがえためいれいは，本とうに正しいのか</b></td>
-              <td></td>
-              <td></td>
-          </tr>
-          <tr>
-              <td>３．課題に取り組む（25分）</td>
-              <td><ul><li>発表していないグループは，発表されたプログラムで正しく動くかどうか実機でトレースして確かめさせ，全員が良いと思ったらワークシートにメモさせて，続きに取り組ませる。</td>
+           <tr>
+              <td>３．プログラムの説明をする（10分）</td>
+              <td><ul><li>全ての命令を説明したら，分かったことを発表させ，ワークシートにメモさせる。</td>
               <td>〇順次処理のプログラムの作成，評価・改善ができる。（話し合いの観察・録音）</td>
               <td></td>
           </tr>
           <tr>
-              <td>４．全ペア又はグループが出来たら全体で振り返りを振り返りをする（10分）</td>
-              <td><ul><li>命令を振り返らせ，説明ができる児童を募り，１つずつ説明させる。<li>グループから１人ずつ発表させる。<li>聞きながらワークシートに整理させる。</ul></td>
-              <td>プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
+              <td>４．課題に取り組む（15分）</td>
+              <td><ul><li>提示されたプログラムの通りに作ってみる。<li>分からないところは友達同士で話し合わせる。<li>完成した児童には，友達をサポートするよう促す。</ul></td>
+              <td></td>
               <td></td>
            </tr>
+           <tr>
+            <td>５．全体で振り返りをする（10分）</td>
+            <td><ul><li>命令を振り返り，命令を１つずつ児童に説明させる。<li>聞きながらワークシートに整理させる。</td>
+            <td>〇プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
+            <td></td>
            <tr>
               <td></td>
               <td><b>まとめ できたプログラムのいみを１つずつたしかめよう</b></td>
@@ -173,6 +170,7 @@
               <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
+       
   </table> 
   </li>
  </ul>
