--- a/dai14.html
+++ b/dai14.html
@@ -80,7 +80,7 @@
           <tr>
               <td>４．全ペア又はグループが出来たら全体で振り返りを振り返りをする（10分）</td>
               <td><ul><li>命令を振り返り，説明ができる児童を募り，１つずつ説明させる。<li>グループから１人ずつ発表する。<li>聞いたことをワークシートに整理させる。</ul></td>
-              <td>プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
+              <td>〇プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
               <td></td>
            </tr>
            <tr>
@@ -158,7 +158,7 @@
           <tr>
               <td>４．全ペア又はグループが出来たら全体で振り返りを振り返りをする（10分）</td>
               <td><ul><li>命令を振り返らせ，説明ができる児童を募り，１つずつ説明させる。<li>グループから１人ずつ発表させる。<li>聞きながらワークシートに整理させる。</ul></td>
-              <td>プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
+              <td>〇プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
               <td></td>
            </tr>
            <tr>
