--- a/dai14.html
+++ b/dai14.html
@@ -48,7 +48,7 @@
              <th width="15%"><b>備考</b></th>
          </tr>  
          <tr>
-              <td>１.本時の見通しをもつ（３分）</td>
+              <td>１.本時の見通しをもつ<br>（３分）</td>
               <td><ul><li>本時の流れをつかませる。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表させる。<li>発表された考えでねらいを達成できるか全体で考させる。<li>ねらいを達成できる考えであれば全員ワークシートにメモをさせる。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
@@ -60,7 +60,7 @@
               <td></td>
          </td>
          <tr>
-              <td>２．課題をつかむ（２分）</td>
+              <td>２．課題をつかむ<br>（２分）</td>
               <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示して，プログラムの概要をつかませる。<li>数字の順番を変えても０，１，２，３に並べ替えるプログラムであることを抑える。<li>良い考えが出たグループにはプログラムを発表してもらう。</td>
               <td>〇自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
               <td>〇児童は１人１台で実機を使いながら考える。</td>
@@ -72,7 +72,7 @@
               <td></td>
           </tr>
           <tr>
-              <td>３．課題に取り組む（25分）</td>
+              <td>３．課題に取り組む<br>（25分）</td>
               <td><ul><li>発表していないグループは，発表されたプログラムで正しく動くかどうか実機でトレースして確かめさせ，全員が良いと思ったらワークシートにメモして続きに取り組ませる。</td>
               <td>〇順次処理のプログラムの作成，評価・改善ができる。（話し合いの観察・録音）</td>
               <td></td>
@@ -90,7 +90,7 @@
               <td></td>
            </tr>
            <tr>
-              <td>５．応用テストプログラム（５分）</td>
+              <td>５．応用テスト<br>プログラム<br>（５分）</td>
               <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
@@ -126,7 +126,7 @@
              <th width="15%"><b>備考</b></th>
          </tr>  
          <tr>
-              <td>１.本時の見通しをもつ（３分）</td>
+              <td>１.本時の見通しをもつ<br>（３分）</td>
               <td><ul><li>本時の流れをつかませる。<li>＜おさえること＞<ul><li>ペア又はグループでプログラムを考え，良い考えが生まれたら全体で発表させる。<li>発表された考えでねらいを達成できるか全体で考えさせる。<li>ねらいを達成できる考えであれば全員ワークシートにメモさせる。<li>プログラムが完成するまでこれを繰り返す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
@@ -138,7 +138,7 @@
               <td></td>
          </td>
          <tr>
-              <td>２．課題をつかむ（２分）</td>
+              <td>２．課題をつかむ<br>（２分）</td>
               <td><ul><li>大型モニターで，本時で取り組むプログラムの動きを提示する。<li><li>良い考えが出たグループはプログラムを発表してもらう。</td>
               <td>〇自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
               <td>〇児童は１人１台で実機を使いながら考える。</td>
@@ -150,7 +150,7 @@
               <td></td>
           </tr>
           <tr>
-              <td>３．課題に取り組む（25分）</td>
+              <td>３．課題に取り組む<br>（25分）</td>
               <td><ul><li>発表していないグループは，発表されたプログラムで正しく動くかどうか実機でトレースして確かめさせ，全員が良いと思ったらワークシートにメモさせて，続きに取り組ませる。</td>
               <td>〇順次処理のプログラムの作成，評価・改善ができる。（話し合いの観察・録音）</td>
               <td></td>
@@ -168,7 +168,7 @@
               <td></td>
            </tr>
            <tr>
-              <td>５．応用テストプログラム（５分）</td>
+              <td>５．応用テスト<br>プログラム<br>（５分）</td>
               <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
