--- a/dai23.html
+++ b/dai23.html
@@ -48,7 +48,7 @@
              <th width="15%"><b>備考</b></th>
          </tr>  
          <tr>
-              <td>１.本時の見通しをもつ（３分）</td>
+              <td>１.本時の見通しをもつ<br>（３分）</td>
               <td><ul><li>本時の流れをつかませる。<li><ul><li>プログラムの説明し，概要をつかませる。<li>プログラム通りに作らせる。<li>完成した児童には，友達の手助けを促す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
@@ -60,19 +60,19 @@
               <td></td>
          </td>
          <tr>
-              <td>２．課題をつかむ（２分）</td>
+              <td>２．課題をつかむ<br>（２分）</td>
               <td><ul><li>カウントする数字をステージから取り除くと，反復し続けることをおさえる。<li>命令を１つず見せ，３→２のように数字が入れ替わる様子をつかませる。</ul> </td>
               <td>〇自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
               <td>〇児童は１人１台で実機を使いながら考える。</td>
          </tr>
            <tr>
-              <td>３．プログラムの説明をする（10分）</td>
+              <td>３．プログラムの説明をする<br>（10分）</td>
               <td><ul><li>全ての命令を説明したら，分かったことを発表させ，ワークシートにメモさせる。</td>
               <td>〇順次処理のプログラムの作成，評価・改善ができる。（話し合いの観察・録音）</td>
               <td></td>
           </tr>
           <tr>
-              <td>４．課題に取り組む（15分）</td>
+              <td>４．課題に取り組む<br>（15分）</td>
               <td><ul><li>提示されたプログラムの通りに作ってみる。<li>分からないところは友達同士で話し合わせる。<li>完成した児童には，友達をサポートするよう促す。</ul></td>
               <td></td>
               <td></td>
@@ -89,7 +89,7 @@
               <td></td>
            </tr>
            <tr>
-              <td>５．応用テストプログラム（５分）</td>
+              <td>５．応用テスト<br>プログラム<br>（５分）</td>
               <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
@@ -125,7 +125,7 @@
              <th width="15%"><b>備考</b></th>
          </tr> 
             <tr>
-              <td>１.本時の見通しをもつ（３分）</td>
+              <td>１.本時の見通しをもつ<br>（３分）</td>
               <td><ul><li>本時の流れをつかませる。<li><ul><li>プログラムの説明し，概要をつかませる。<li>プログラム通りに作らせる。<li>完成した児童には，友達の手助けを促す。</ul></ul></td>
               <td></td>
               <td>〇例題プログラムに使用するパーツは「きょうしつでビスケット」上に準備しておくと活動がスムーズに行える。</td>
@@ -137,25 +137,25 @@
               <td></td>
          </td>
          <tr>
-              <td>２．課題をつかむ（２分）</td>
+              <td>２．課題をつかむ<br>（２分）</td>
               <td><ul><li>カウントする数字をステージから取り除くと，反復し続けることをおさえる。<li>命令を１つず見せ，３→２のように数字が入れ替わる様子をつかませる。</ul> </td>
               <td>〇自分のプログラムを振り返り，手順の組み合わせをどのように改善していけばよいか考えている。</td>
               <td>〇児童は１人１台で実機を使いながら考える。</td>
          </tr>
            <tr>
-              <td>３．プログラムの説明をする（10分）</td>
+              <td>３．プログラムの説明をする<br>（10分）</td>
               <td><ul><li>全ての命令を説明したら，分かったことを発表させ，ワークシートにメモさせる。</td>
               <td>〇順次処理のプログラムの作成，評価・改善ができる。（話し合いの観察・録音）</td>
               <td></td>
           </tr>
           <tr>
-              <td>４．課題に取り組む（15分）</td>
+              <td>４．課題に取り組む<br>（15分）</td>
               <td><ul><li>提示されたプログラムの通りに作ってみる。<li>分からないところは友達同士で話し合わせる。<li>完成した児童には，友達をサポートするよう促す。</ul></td>
               <td></td>
               <td></td>
            </tr>
            <tr>
-            <td>５．全体で振り返りをする（10分）</td>
+            <td>５．全体で振り返りをする<br>（10分）</td>
             <td><ul><li>命令を振り返り，命令を１つずつ児童に説明させる。<li>聞きながらワークシートに整理させる。</td>
             <td>〇プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
             <td></td>
@@ -166,7 +166,7 @@
               <td></td>
            </tr>
            <tr>
-              <td>５．応用テストプログラム（５分）</td>
+              <td>５．応用テスト<br>プログラム<br>（５分）</td>
               <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
