--- a/dai14.html
+++ b/dai14.html
@@ -90,7 +90,7 @@
               <td></td>
            </tr>
            <tr>
-              <td>５．応用テスト<br>プログラム<br>（５分）</td>
+              <td>５．応用テストプログラム<br>（５分）</td>
               <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
@@ -168,7 +168,7 @@
               <td></td>
            </tr>
            <tr>
-              <td>５．応用テスト<br>プログラム<br>（５分）</td>
+              <td>５．応用テストプログラム<br>（５分）</td>
               <td><ul><li>授業の内容をどれだけ理解できたか把握するために，応用テストプログラムに挑戦させる。</ul></td>
               <td>〇プログラムの全体的な特徴や要点を捉え，新たな考えを見出している。（成果物）</td>
               <td>〇テストで使用するプログラムのパーツは「きょうしつでビスケット」の別ページに準備しておくと活動がスムーズに行える。</td>
