--- a/dai23.html
+++ b/dai23.html
@@ -78,7 +78,7 @@
               <td></td>
            </tr>
            <tr>
-            <td>５．全体で振り返りをする（10分）</td>
+            <td>５．全体で振り返りをする<br>（10分）</td>
             <td><ul><li>命令を振り返り，命令を１つずつ児童に説明させる。<li>聞きながらワークシートに整理させる。</td>
             <td>〇プログラムを振り返り，改善点を見出そうとする態度が見られる。（話し合いの録音とワークシートの記述）</td>
             <td></td>
