--- a/dai23.html
+++ b/dai23.html
@@ -132,7 +132,7 @@
          </tr>
          <tr>
               <td></td>
-              <td><b>めあて コンピュータに３，２，１，０と数えさせ，０になったらパクパクをとめさせることができるようになる。</b></td>
+              <td><b>めあて コンピュータに五かくのかんじのひつじゅんをおぼえさせ，かんじをかんせいできるようになろう。</b></td>
               <td></td>
               <td></td>
          </td>
