--- a/dai14.html
+++ b/dai14.html
@@ -21,19 +21,19 @@
    <p>第１回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは数を直接比較して入れ替える<b>「バブルソート」</b>を題材としている。プログラミングの基本処理は<b>「順次処理」</b>である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
-             <th width="11%"><b>命令</b></th>
+             
              <th width="39%"><b>例題プログラム</b></th>
              <th width="11%"><b>命令</b></th>
              <th width="39%"><b>応用テストプログラム</b></th>
+             <th width="11%"><b>命令</b></th>
    </tr>  
    <tr>
-        <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" alt="バブルソート" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  autoplay loop width="100%">
+           <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
-           </video>
-        </td>
-        <td><img src="https://tkby.github.io/micra.github.io/baburuoyo.jpg" alt="バブルソート２" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  autoplay loop width="100%">
+           </video></td>
+           <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" alt="バブルソート" width="100%"</td>
+           <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  autoplay loop width="100%">
+           <td><img src="https://tkby.github.io/micra.github.io/baburuoyo.jpg" alt="バブルソート２" width="100%"</td>
                  <p>動画を再生できません。</p>
            </video>
         </td>
@@ -99,22 +99,20 @@
   <p>第４回検証授業は「随時振り返り」型で授業を行った。例題で扱ったプログラムは，<b>「もぐらたたき」</b>を題材にしている。穴からもぐらがランダムに出て来て，頭を大きくだした時にタップすると，もぐらが穴とともに消えるゲームプログラムである。プログラミングの基本処理は<b>「分岐を含む反復処理」</b>である。</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="98%">
     <tr align="center">
-             <th width="11%"><b>命令</b></th>
              <th width="39%"><b>例題プログラム</b></th>
              <th width="11%"><b>命令</b></th>
              <th width="39%"><b>応用テストプログラム</b></th>
+             <th width="11%"><b>命令</b></th>
    </tr>  
    <tr>
-        <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" alt="もぐらたたき" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  autoplay loop width="100%">
+           <td><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
-           </video>
-        </td>
-        <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" alt="ワニワニ" width="100%"</td>
-        <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  autoplay loop width="100%">
+           </video></td>
+           <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" alt="もぐらたたき" width="100%"</td>
+           <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  autoplay loop width="100%">
                  <p>動画を再生できません。</p>
-           </video>
-        </td>
+           </video></td>
+           <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" alt="ワニワニ" width="100%"</td>
    </tr>
   </table>
           <h2>第４回検証授業「随時振り返り」型の展開</h2>
