--- a/IV2_2.html
+++ b/IV2_2.html
@@ -25,7 +25,6 @@
     <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="33%"><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵の商店街" width="33%"><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラで作った商店街" width="33%"></div>
    <p>これらの３つのプロフィールは，振り返りで「評価・改善する『情報活用能力』」を育成するための手立てである。３回の検証授業を通して，児童が自分たちの捉え方を客観的に把握するために，教員13名から得たプロフィールを，「子供より地元の商店街に詳しい大人のプロフィール」とし，比較対象とした。</p>
    <h2>第１回検証授業　プロフィール類似点・相違点</h2>
-   
          <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="70%"></div>
          <table border="1"cellspacing="0" bordercolor="#333" width="98%">
          <tr align="center">
@@ -73,8 +72,10 @@
                    </ul>
                </ul>
           <h2>第２回検証授業　プロフィール類似点</h2>
-          <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラ商店街" width="70%"></div>
-            <table border="1"cellspacing="0" bordercolor="#333" width="98%">
+   
+          <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵商店街" width="70%"></div>
+          
+              <table border="1"cellspacing="0" bordercolor="#333" width="98%">
                <tr align="center">
                    <th width="20%"><b>種類</b></th>
                    <th width="30%"><b>大人と子供の捉え方の類似点</b></th>
@@ -94,8 +95,8 @@
                </ul>
   
    <h2>第３回検証授業　プロフィール相違点</h2>
-          <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="マイクラ商店街" width="70%"></div>
-               <p>下の表は，マインクラフトで制作した商店街に対する大人と子供の捉え方を比較し，どちら側に寄っているかを示すものです。</p>
+   <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラ商店街" width="70%"></div>
+             <p>下の表は，マインクラフトで制作した商店街に対する大人と子供の捉え方を比較し，どちら側に寄っているかを示すものです。</p>
                <table border="1"cellspacing="0" bordercolor="#333" width="98%">
                <tr align="center">
                    <th width="15%"><b>種類</b></th>
